--- a/binderhub/event-schemas/launch.json
+++ b/binderhub/event-schemas/launch.json
@@ -14,7 +14,8 @@
         "Zenodo",
         "Figshare",
         "Hydroshare",
-        "Dataverse"
+        "Dataverse",
+        "GWDG"
       ],
       "description": "Provider for the repository being launched"
     },
