--- a/helm-chart/binderhub/values.yaml
+++ b/helm-chart/binderhub/values.yaml
@@ -16,8 +16,8 @@ rbac:
 nodeSelector: {}
 
 image:
-  name: jupyterhub/k8s-binderhub
-  tag: "local"
+  name: localhost:443/k8s-binderhub
+  tag: "0.2.0-n999.h6880c13"
 
 # registry here is only used to create docker config.json
 registry:
@@ -283,16 +283,14 @@ ingress:
     type: kube-lego
   hosts: []
   ingressClassName:
-  annotations:
-    {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   pathSuffix:
     # Suffix added to Ingress's routing path pattern.
     # Specify `*` if your ingress matches path by glob pattern.
   pathType: Prefix
-  tls:
-    []
+  tls: []
     # Secrets must be manually created in the namespace.
     # - secretName: chart-example-tls
     #   hosts:
