--- a/helm-chart/chartpress.yaml
+++ b/helm-chart/chartpress.yaml
@@ -5,7 +5,8 @@
 #       helm-chart folder.
 charts:
   - name: binderhub
-    imagePrefix: jupyterhub/k8s-
+    #imagePrefix: jupyterhub/k8s-
+    imagePrefix: localhost:443/k8s-
     repo:
       git: jupyterhub/helm-chart
       published: https://jupyterhub.github.io/helm-chart
