--- a/helm-chart/images/binderhub/requirements.txt
+++ b/helm-chart/images/binderhub/requirements.txt
@@ -131,9 +131,9 @@ requests-oauthlib==1.3.1
     # via kubernetes
 rsa==4.8
     # via google-auth
-ruamel-yaml==0.17.21
+ruamel-yaml #==0.17.21
     # via jupyter-telemetry
-ruamel-yaml-clib==0.2.6
+ruamel-yaml-clib #==0.2.6
     # via ruamel-yaml
 six==1.16.0
     # via
